--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/RandyEpp/gh-pages">View on GitHub</a>
 
-          <h1 id="project_title">Gh-pages</h1>
+          <h1 id="project_title">Gh-pages Edits</h1>
           <h2 id="project_tagline">Personal Tinker Room</h2>
 
             <section id="downloads">
@@ -66,7 +66,7 @@
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
