--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         <div class="col-sm-3 leftalign">
                             <div id="" class="col-lg-12 shadow">
-                                <img src="/img/door.png">
+                                <img src="/gh-pages/blob/gh-pages/img/door.png">
                             </div>
                             <h3 class="largermargin darktext">Door screens<br>that disappear <br>when not in use</h3>
                             <!--<p class="smallmargin darktext">Great for entry, sliding, double, oversized, and French doors.</p>-->
@@ -100,7 +100,7 @@
 
                         <div class="col-sm-6 leftalign">
                             <div id="" class="col-lg-12 shadow">
-                                <img src="/img/large.png">
+                                <img src="/gh-pages/blob/gh-pages/img/large.png">
                             </div>
                             <h3 class="largermargin darktext">Motorized<br> retractable screens <br>for porches &amp; patios</h3>
                             <!--<p class="smallmargin darktext">Perfect for porches, patios, and lanais. They can also be integrated with a wide variety of home automation systems.</p>-->
@@ -112,7 +112,7 @@
 
                         <div class="col-sm-3 leftalign">
                             <div id="" class="col-lg-12 shadow">
-                                <img src="/img/window.png">
+                                <img src="/gh-pages/img/window.png">
                             </div>
                             <h3 class="largermargin darktext">Window screens<br> that can hide <br> from sight</h3>
                             <!--<p class="smallmargin darktext">Works on most single &amp; double hung, awning and casement windows.</p>-->
