--- a/door.html
+++ b/door.html
@@ -54,13 +54,8 @@
                     <li>
                         <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-cta">Find a Store</button></a>
                     </li>
-                    <!--
                     <li>
                         <a class="page-scroll" data-toggle="modal" data-target="#contact"><button type="button" class="btn btn-cta">Get Pricing</button></a>
-                    </li>
-                    -->
-                    <li>
-                        <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-cta">Contact Us</button></a>
                     </li>
                 </ul>
             </div>
@@ -138,7 +133,7 @@
                             </li>
                             <br>
                             <li>
-                                <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-cta btn-block">Get Pricing</button></a>
+                                <a class="page-scroll" data-toggle="modal" data-target="#contact"><button type="button" class="btn btn-cta btn-block">Get Pricing</button></a>
                             </li>
                         </ul>
                     </div>
