--- a/motorized.html
+++ b/motorized.html
@@ -55,7 +55,7 @@
                         <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-cta">Find a Store</button></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-cta">Contact Us</button></a>
+                        <a class="page-scroll" data-toggle="modal" data-target="#contact"><button type="button" class="btn btn-cta">Get Pricing</button></a>
                     </li>
                 </ul>
             </div>
@@ -133,7 +133,7 @@
                             </li>
                             <br>
                             <li>
-                                <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-ctad btn-block">Contact Us</button></a>
+                                <a class="page-scroll" data-toggle="modal" data-target="#contact"><button type="button" class="btn btn-ctad btn-block">Get Pricing</button></a>
                             </li>
                         </ul>
                     </div>
