--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-ctad">Find a Store</button></a>
+                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="findastore" class="btn btn-ctad">Find a Store</button></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-ctad">Contact Us</button></a>
@@ -230,7 +230,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-md-4" for="comment">Question or Comment</label>
+                    <label class="control-label col-md-4" fsor="comment">Question or Comment</label>
                     <div class="col-md-6">
                         <textarea rows="6" class="form-control" id="comments" name="comments" placeholder="Your question or comment here"></textarea>
                     </div>
