--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="findastore" class="btn btn-ctad">Find a Store</button></a>
+                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="findastoreclass="btn btn-ctad">Find a Store</button></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-ctad">Contact Us</button></a>
@@ -96,8 +96,8 @@
                             <div class="row higher">
                                 <p class="sierra">Door screens that disappear from sight </p>
                             </div>
-                            <a target="_blank" href="http://www.phantomscreens.com/retractable-door-screens/"><button type="button" class="btn btn-mcta marginadjust">See it </button></a>
-                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-ctad marginadjust">Get it </button></a>
+                            <a target="_blank" href="http://www.phantomscreens.com/retractable-door-screens/"><button type="button" id="door" class="btn btn-mcta marginadjust">See it </button></a>
+                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="door" class="btn btn-ctad marginadjust">Get it </button></a>
                         </div>
 
                         <div class="col-sm-6 leftalign splitborder">
@@ -107,9 +107,9 @@
                             <div class="row higher">
                                 <p class="sierra">Transform your porch with the touch of a button</p>
                             </div>
-                            <a target="_blank" href="http://www.phantomscreens.com/retractable-large-openings/"><button type="button" class="btn btn-mcta marginadjust">See it </button></a>
+                            <a target="_blank" href="http://www.phantomscreens.com/retractable-large-openings/"><button type="button" id="exec" class="btn btn-mcta marginadjust">See it </button></a>
                             <div class="row">
-                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-ctad marginadjust">Get it </button></a>
+                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="exec" class="btn btn-ctad marginadjust">Get it </button></a>
                             </div>
                         </div>
 
@@ -120,8 +120,8 @@
                             <div class="row higher">
                                 <p class="sierra">Window screens that won't block your view</p>
                             </div>
-                            <a target="_blank" href="http://www.phantomscreens.com/retractable-window-screens/"><button type="button" class="btn btn-mcta marginadjust">See it </button></a>
-                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-ctad marginadjust">Get it </button></a>
+                            <a target="_blank" href="http://www.phantomscreens.com/retractable-window-screens/"><button type="button"  id="window" class="btn btn-mcta marginadjust">See it </button></a>
+                            <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="window" class="btn btn-ctad marginadjust">Get it </button></a>
                         </div>
 
 
