--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" id="findastoreclass="btn btn-ctad">Find a Store</button></a>
+                        <a class="page-scroll" href="http://www.phantomscreens.com/where-to-buy/" target="_blank"><button type="button" class="btn btn-ctad">Find a Store</button></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="http://www.phantomscreens.com/support/contact/" target="_blank"><button type="button" class="btn btn-ctad">Contact Us</button></a>
