--- a/heart.html
+++ b/heart.html
@@ -68,7 +68,10 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<!-- Fontawesome -->
+<!-- Plugin JavaScript -->
+<script src="js/jquery.easing.min.js"></script>
+    
+ <!-- Fontawesome -->
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 <!-- Bootstrap -->
@@ -77,3 +80,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+</body>
+</html>
+
+
