--- a/article.html
+++ b/article.html
@@ -34,7 +34,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
-    <div class="row">
+    <div class="row margin">
               
         <div class="row">
                   
