--- a/article.html
+++ b/article.html
@@ -136,7 +136,7 @@
                 <img class="img-responsive" src="http://www.phantomscreens.com/drive/uploads/2016/03/7.jpg" />
             </div>
             <div class="col-md-6">
-                <h2>Ultimate Cool Idea: <strong>Retractable Screens.</strong></h2>
+                <h2>Ultimate Cool Idea: <strong>Phantom Retractable Screens.</strong></h2>
                 <p>
                 Grill all year around by enclosing your patio with <em>motorized retractable screens</em>. Bonus – no nasty bugs to bother you while grilling!<br><br>
                 <strong><u><a href="http://www.phantomscreens.com/retractable-large-openings/">Click here for more information on motorized screens</a>.</u></strong>
