--- a/article.html
+++ b/article.html
@@ -138,7 +138,7 @@
             <div class="col-md-6">
                 <h2>Ultimate Cool Idea:<br> <strong>Phantom Retractable Screens.</strong></h2>
                 <p>
-                Grill all year around by enclosing your patio with <em>motorized retractable screens</em>. Bonus – no nasty bugs to bother you while grilling!<br><br>
+                Grill all year around by enclosing your patio with <em>Phantom motorized retractable screens</em>. Bonus – no nasty bugs to bother you while grilling!<br><br>
                 <strong><u><a href="http://www.phantomscreens.com/retractable-large-openings/">Click here for more information on motorized screens</a>.</u></strong>
                 </p>
             </div>
