--- a/article.html
+++ b/article.html
@@ -40,8 +40,8 @@
                   
             <div class="col-md-8">
               <br>
-                <h1><strong>Tips on picking the right grill </strong></h1>
-                <h2>Gas or Charcoal? - Let's settle this once and for all! </h2>
+                <h1><strong>Gas or Charcoal? </strong></h1>
+                <h2>Tips on picking the right grill - Let's settle this once and for all! </h2>
                 <p><em>Gas or Charcoal? Freestanding or built-in? Let's settle this once and for all! For most masters of the grill, there is no compromising; you are either in one camp or the other. Here you’ll find answers to these questions and more to help you pick the right grill for you.</em></p>
             </div>
         </div>
