--- a/door.html
+++ b/door.html
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/embed.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -35,7 +36,9 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>Basic Page</h4>
-        <div class='embed-container'><iframe src='https://www.youtube.com/embed/PdYNDuyxNco' frameborder='0' allowfullscreen></iframe></div>
+        <div class=vertical-limit">
+          <div class='embed-container'><iframe src='https://www.youtube.com/embed/PdYNDuyxNco' frameborder='0' allowfullscreen></iframe></div>
+        </div>
       </div>
     </div>
   </div>
